tests/baselines/reference/importHelpersNoHelpersForPrivateFields.errors.txt
tests/cases/compiler/main.ts(4,9): error TS2343: This syntax requires an imported helper named '__classPrivateFieldSet' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/main.ts(4,23): error TS2343: This syntax requires an imported helper named '__classPrivateFieldGet' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/main.ts(5,9): error TS2343: This syntax requires an imported helper named '__classPrivateFieldIn' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== tests/cases/compiler/main.ts (3 errors) ====
    export class Foo {
        #field = true;
        f() {
            this.#field = this.#field;
            ~~~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__classPrivateFieldSet' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                          ~~~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__classPrivateFieldGet' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
            #field in this;
            ~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__classPrivateFieldIn' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        }
    }
    
==== tests/cases/compiler/tslib.d.ts (0 errors) ====
    export {}
    